--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,8 +9,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: ^2.27.0
+  firebase_auth: ^4.17.9
+  cloud_firestore: ^4.14.0
+  firebase_storage: ^11.6.5
   flutter_rating_bar: ^4.0.1   # This line adds the star rating package
   url_launcher: ^6.3.0   # ← make sure you have this (or higher)
+  image_picker: ^1.0.7   # ADD THIS
+  provider: ^6.1.2
+  shared_preferences: ^2.3.0
+  intl: ^0.19.0
+  http: ^1.2.0
+  flutter_dotenv: ^5.1.0
+  
 
 dev_dependencies:
   flutter_test:
